--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "firebase": "^7.0 || ^8.0",
     "ngx-toastr": "^13.2.0",
+    "ngx-wow": "^2.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
